<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maple.kaka.member_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="left"
            android:layout_weight="0.02"
            android:gravity="left"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="138dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.03"
                    app:srcCompat="@drawable/logo_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.03"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_logout"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="0dp"
                        android:layout_weight="1"
                        android:paddingBottom="0dp"
                        android:text="Logout"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_ven_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="userID" />

                    <TextView
                        android:id="@+id/tv_ven_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="userEmail" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_01"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0.08"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/member_setting_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/setting_03"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/member_setting_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/setting_02"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/member_setting_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/setting_01"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/member_setting_04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_vertical"
                android:text="@string/setting_04"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:background="@android:color/black" />

        <LinearLayout
            android:id="@+id/setting_03"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0.04"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/member_setting_08"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/setting_08"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/member_setting_09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/setting_09"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" />

        <LinearLayout
            android:id="@+id/setting_04"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0.04"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:weightSum="0.8">

            <TextView
                android:id="@+id/member_setting_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/setting_10"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/member_setting_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/setting_11"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02" />

        <LinearLayout
            android:id="@+id/setting_05"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0.04"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/member_setting_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/setting_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/member_setting_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:text="@string/setting_13"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
