<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegister"
    tools:context="com.example.maple.kaka.vendor_register">

    <LinearLayout
        android:id="@+id/register_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ven_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"

            android:ems="10"
            android:hint="@string/text_ven_phone"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ven_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/text_ven_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_check"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="중복확인"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/ven_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/text_ven_number"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_corname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/text_ven_corname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/text_ven_name"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="비밀번호"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="비밀번호확인"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/text_ven_birth"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/gendor_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/vendor_gendor_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1.02"
                android:background="@drawable/rbtn_selector"
                android:button="@drawable/rbtn_selector"
                android:checked="false"
                android:hint="@string/text_ven_man"
                android:textAlignment="center"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/vendor_gendor_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.02"
                android:background="@drawable/rbtn_selector"
                android:button="@drawable/rbtn_selector"
                android:checked="false"
                android:hint="@string/text_ven_woman"
                android:textAlignment="center"
                android:textColor="@drawable/rbtn_textcolor_selector"
                android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </RadioGroup>

        <TextView
            android:id="@+id/ven_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/text_ven_address"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="상세주소 입력"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/venderupdate"
        android:layout_below="@+id/register_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="FOLLOW"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"

            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ven_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/text_ven_follow"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="*FOLLOW 변경되지 않습니다"
            android:textAlignment="textEnd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ven_termsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="약관동의" />

            <CheckBox
                android:id="@+id/ven_collectCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="정보수집동의" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/venderupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="완료"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
